Complete the coding convention folder server